tests/baselines/reference/moduleSharesNameWithImportDeclarationInsideIt3.errors.txt
moduleSharesNameWithImportDeclarationInsideIt3.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduleSharesNameWithImportDeclarationInsideIt3.ts(2,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduleSharesNameWithImportDeclarationInsideIt3.ts(9,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduleSharesNameWithImportDeclarationInsideIt3.ts(9,10): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduleSharesNameWithImportDeclarationInsideIt3.ts(10,12): error TS2300: Duplicate identifier 'M'.
moduleSharesNameWithImportDeclarationInsideIt3.ts(11,12): error TS2300: Duplicate identifier 'M'.


==== moduleSharesNameWithImportDeclarationInsideIt3.ts (6 errors) ====
    module Z {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export module M {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export function bar() {
                return "";
            }
        }
        export interface I { }
    }
    module A.M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
             ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        import M = Z.M;
               ~
!!! error TS2300: Duplicate identifier 'M'.
        import M = Z.I;
               ~
!!! error TS2300: Duplicate identifier 'M'.
    
        export function bar() {
        }
        M.bar(); // Should call Z.M.bar
    }